--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "msr-firebase",
+  "name": "@migration-script-runner/msr-firebase",
   "version": "0.1.6",
-  "description": "Firebase Migration Script Runner",
+  "description": "Migration Script Runner for Firebase Realtime Database",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -25,8 +25,12 @@
   "keywords": [
     "firebase",
     "migration",
-    "migration script runner",
-    "migration script"
+    "migration-script-runner",
+    "msr",
+    "database",
+    "schema",
+    "realtime-database",
+    "@migration-script-runner"
   ],
   "author": {
     "name": "Volodymyr Lavrynovych",
@@ -62,18 +66,18 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@migration-script-runner/core": "^0.7.0",
     "@types/lodash": "^4.14.200",
     "ascii-table3": "^0.9.0",
     "lodash": "^4.17.21",
-    "migration-script-runner": "^0.1.11",
     "moment": "^2.29.4"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/vlavrynovych/msr-firebase.git"
+    "url": "https://github.com/migration-script-runner/msr-firebase.git"
   },
   "bugs": {
-    "url": "https://github.com/vlavrynovych/msr-firebase/issues",
+    "url": "https://github.com/migration-script-runner/msr-firebase/issues",
     "email": "volodyalavrynovych@gmail.com"
   }
 }
