--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,12 +1,7 @@
 {
   "extensions": ["ts"],
-  "package": "./package.json",
   "spec": ["test/**/*.test.ts"],
-  "timeout": 30000,
-  "exit": true,
+  "require": ["ts-node/register", "test/setup.ts"],
   "color": true,
-  "node-option": [
-    "experimental-specifier-resolution=node",
-    "loader=ts-node/esm"
-  ]
+  "exit": true
 }
