#40: Reorganized test structure into unit/ and integration/ directories
- Created test/unit/service/ for unit tests
- Created test/integration/ for future integration tests
- Moved all existing tests to test/unit/service/
- Updated imports to reflect new directory structure
- Added separate npm scripts: test:unit, test:integration, test:all
- Test infrastructure now matches MSR Core pattern

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "start:js": "npm run build && node dist/index.js",
     "start:ts": "npm run build && npx ts-node src/index.ts",
     "build": "rimraf ./dist && tsc && rimraf ./dist/test",
-    "test": "npm run lint && npm run test:mocha",
-    "test:mocha": "mocha",
+    "test": "npm run lint && npm run test:unit",
+    "test:unit": "mocha test/unit/**/*.test.ts",
+    "test:integration": "mocha test/integration/**/*.test.ts",
+    "test:all": "mocha",
     "test:watch": "npx nodemon",
     "test:mocha:report": "mocha --reporter mocha-junit-reporter --reporter-options mochaFile=./reports/mocha/test-results.xml",
     "test:coverage": "nyc npm run test:mocha:report",
