#37: Setup Husky pre-commit hooks
- Initialized Husky v9.1.7 with npx husky init
- Created .husky/pre-commit hook that runs npm test
- Pre-commit hook runs lint and unit tests before allowing commits
- Added prepare script to package.json for Husky setup
- Hook verified working - will block commits on lint/test failures

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test:coverage:coveralls": "nyc report --reporter=text-lcov | coveralls",
     "test:report": "rimraf ./reports && npm run lint:report && npm run test:coverage",
     "lint": "eslint ./src/",
-    "lint:report": "eslint ./src/ --format junit --output-file ./reports/eslint.xml"
+    "lint:report": "eslint ./src/ --format junit --output-file ./reports/eslint.xml",
+    "prepare": "husky"
   },
   "keywords": [
     "firebase",
