#38: Updated LICENSE to match MSR Core format with full compliance
- Updated LICENSE with attribution to MSR Core (required for adapters)
- Created NOTICE file with quick FAQ and license summary
- Updated package.json license field to "SEE LICENSE IN LICENSE"
- Updated README.md license badge to show "MIT + CC + Attribution"
- Added License section to README.md with quick summary
- Changed copyright year to 2023-2025
- Protects msr-firebase with same rules as MSR Core

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "email": "volodyalavrynovych@gmail.com",
     "url": "https://www.instagram.com/vlavrynovych/"
   },
-  "license": "MIT",
+  "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@types/chai": "^4.3.9",
