--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "build": "rimraf ./dist && tsc && rimraf ./dist/test",
     "test": "npm run lint && npm run test:unit",
     "test:unit": "mocha test/unit/**/*.test.ts",
-    "test:integration": "mocha test/integration/**/*.test.ts",
-    "test:all": "mocha",
+    "test:integration": "firebase emulators:exec --only database 'mocha test/integration/**/*.test.ts'",
+    "test:all": "npm run test:unit && npm run test:integration",
     "test:watch": "npx nodemon",
     "test:mocha:report": "mocha --reporter mocha-junit-reporter --reporter-options mochaFile=./reports/mocha/test-results.xml",
     "test:coverage": "nyc npm run test:mocha:report",
     "test:coverage:coveralls": "nyc report --reporter=text-lcov | coveralls",
     "test:report": "rimraf ./reports && npm run lint:report && npm run test:coverage",
+    "emulator:start": "firebase emulators:start --only database",
     "lint": "eslint ./src/",
     "lint:report": "eslint ./src/ --format junit --output-file ./reports/eslint.xml",
     "prepare": "husky"
@@ -60,6 +61,7 @@
     "eslint": "^9.39.2",
     "eslint-plugin-only-warn": "^1.1.0",
     "firebase-admin": "^11.11.0",
+    "firebase-tools": "^15.0.0",
     "husky": "^9.1.7",
     "mocha": "^11.7.5",
     "mocha-junit-reporter": "^2.2.1",
