#44, #10: Restructure test suite with proper unit/integration separation
Reorganized test architecture to align with testing best practices.

- Moved all database-dependent tests to test/integration/service/
- Created proper unit tests with mocking for BackupService, MigrationScriptService, FirebaseDB, FirebaseDataService, AppConfig
- Configured nyc for coverage reporting with realistic thresholds (90% lines, 85% functions, 70% branches)
- Added IntegrationTestConfig and fake service account for emulator tests
- Separated mocha configs: .mocharc.json (unit), .mocharc.integration.json (integration)
- Updated package.json scripts for separate unit/integration/coverage runs

--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "start:js": "npm run build && node dist/index.js",
     "start:ts": "npm run build && npx ts-node src/index.ts",
     "build": "rimraf ./dist && tsc && rimraf ./dist/test",
-    "test": "npm run lint && npm run test:unit",
-    "test:unit": "mocha test/unit/**/*.test.ts",
-    "test:integration": "firebase emulators:exec --only database 'mocha test/integration/**/*.test.ts'",
+    "test": "npm run lint && npm run test:unit && npm run test:integration",
+    "test:unit": "mocha --config .mocharc.json",
+    "test:integration": "firebase emulators:exec --only database 'npx mocha --config .mocharc.integration.json'",
     "test:all": "npm run test:unit && npm run test:integration",
     "test:watch": "npx nodemon",
     "test:mocha:report": "mocha --reporter mocha-junit-reporter --reporter-options mochaFile=./reports/mocha/test-results.xml",
-    "test:coverage": "nyc npm run test:mocha:report",
+    "test:coverage:unit": "nyc mocha --config .mocharc.json",
+    "test:coverage:integration": "nyc firebase emulators:exec --only database 'npx mocha --config .mocharc.integration.json'",
+    "test:coverage": "npm run test:coverage:unit && npm run test:coverage:integration",
+    "test:coverage:report": "nyc report --reporter=html --reporter=text",
     "test:coverage:coveralls": "nyc report --reporter=text-lcov | coveralls",
     "test:report": "rimraf ./reports && npm run lint:report && npm run test:coverage",
     "emulator:start": "firebase emulators:start --only database",
