--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -43,12 +43,12 @@ jobs:
           node-version: "16"
 
       - run: npm install
-      - run: |
-          source scripts/ci.sh
-          npm run test:mocha
-        env:
-          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
+      - name: Run linting
+        run: npm run lint
+
+      - name: Run unit tests
+        run: npm run test:unit
 
       - run: npm run build
 
