#46: Create CLI entry point using createCLI() factory
Added src/cli.ts with MSR Core v0.7.0 createCLI() integration.

Configured async executor creation with FirebaseRunner and custom commands:
- firebase:info - Show connection information
- firebase:test-connection - Test database connection

Added bin entry in package.json for msr-firebase command.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Migration Script Runner for Firebase Realtime Database",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "bin": {
+    "msr-firebase": "./dist/src/cli.js"
+  },
   "files": [
     "/dist"
   ],
