#57: Setup Jekyll documentation infrastructure with just-the-docs theme
- Created Jekyll configuration (_config.yml) with just-the-docs theme
- Created GitHub Actions workflow for automatic deployment to Pages
- Created custom title override to display both logo and site name
- Added custom CSS for Mermaid diagrams and callouts
- Created documentation structure with index pages (api, guides, examples)
- Added npm scripts for local documentation development
- Created README with local setup instructions

--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "emulator:start": "firebase emulators:start --only database",
     "lint": "eslint ./src/",
     "lint:report": "eslint ./src/ --format junit --output-file ./reports/eslint.xml",
+    "docs:install": "cd docs && bundle install",
+    "docs:serve": "cd docs && bundle exec jekyll serve",
+    "docs:build": "cd docs && bundle exec jekyll build",
     "prepare": "husky"
   },
   "keywords": [
