#54, #61: Fix Firebase Emulator CI failures and add caching
- Add emulator caching to speed up CI builds
- Add Java verification and FIREBASE_EMULATOR_DOWNLOAD_CACHE env var
- Set explicit hub/logging ports in firebase.json to avoid conflicts
- Fixes exit code 35 errors in GitHub Actions

--- a/firebase.json
+++ b/firebase.json
@@ -6,6 +6,12 @@
     },
     "ui": {
       "enabled": false
+    },
+    "hub": {
+      "port": 4400
+    },
+    "logging": {
+      "port": 4500
     }
   }
 }
