--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,14 +25,16 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
+      - name: Verify Java Installation
+        run: |
+          java -version
+          echo "JAVA_HOME=$JAVA_HOME"
+
       - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
 
       - name: Cache Firebase Emulator
         uses: actions/cache@v4
@@ -42,6 +44,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-firebase-emulators-
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Run linter
         run: npm run lint
 
@@ -50,6 +55,8 @@ jobs:
 
       - name: Run integration tests with Firebase Emulator
         run: npm run test:integration
+        env:
+          FIREBASE_EMULATOR_DOWNLOAD_CACHE: ~/.cache/firebase/emulators
 
       - name: Generate coverage report
         run: npm run test:coverage
