--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,6 +50,9 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Create backups directory
+        run: mkdir -p backups
+
       - name: Run linter
         run: npm run lint
 
