#21: Fix coverage reporting to combine unit and integration tests
Changes:
- Use --no-clean flag for integration test coverage to preserve unit test data
- Add final nyc report step to combine and display merged coverage
- Remove duplicate test run in CI (coverage already runs tests)
- Simplify workflow to single coverage step with emulator env var

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,16 +56,10 @@ jobs:
       - name: Run linter
         run: npm run lint
 
-      - name: Run unit tests
-        run: npm run test:unit
-
-      - name: Run integration tests with Firebase Emulator
-        run: npm run test:integration
+      - name: Run tests with coverage
+        run: npm run test:coverage
         env:
           FIREBASE_EMULATOR_DOWNLOAD_CACHE: ~/.cache/firebase/emulators
-
-      - name: Generate coverage report
-        run: npm run test:coverage
 
       - name: Upload coverage to Coveralls
         uses: coverallsapp/github-action@v2
