--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "test:watch": "npx nodemon",
     "test:mocha:report": "mocha --reporter mocha-junit-reporter --reporter-options mochaFile=./reports/mocha/test-results.xml",
     "test:coverage:unit": "nyc mocha --config .mocharc.json",
-    "test:coverage:integration": "nyc firebase emulators:exec --only database 'npx mocha --config .mocharc.integration.json'",
-    "test:coverage": "npm run test:coverage:unit && npm run test:coverage:integration",
+    "test:coverage:integration": "nyc --no-clean firebase emulators:exec --only database 'npx mocha --config .mocharc.integration.json'",
+    "test:coverage": "npm run test:coverage:unit && npm run test:coverage:integration && nyc report",
     "test:coverage:report": "nyc report --reporter=html --reporter=text",
     "test:coverage:coveralls": "nyc report --reporter=text-lcov | coveralls",
     "test:report": "rimraf ./reports && npm run lint:report && npm run test:coverage",
