#22: Major documentation and branding improvements
- Changed "adapter" to "implementation" throughout docs for better terminology
- Added "MSR:" prefix to title for clarity (MSR: Firebase)
- Integrated version display from package.json into sidebar and homepage
- Updated all examples to use new FirebaseRunner.getInstance() API
- Added Jekyll plugin to automatically read package versions
- Updated migration guide references to use "implementation"

Key improvements:
- Home page now shows "Firebase implementation v0.1.6 for Migration Script Runner v0.8.1"
- Sidebar displays version badge dynamically
- All code examples use cleaner getInstance() API instead of manual handler creation
- Added MSR Core Docs button to homepage
- Better alignment with MSR ecosystem branding

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,8 +2,8 @@
 # Just the Docs theme documentation: https://just-the-docs.github.io/just-the-docs/
 
 # Site settings
-title: MSR Firebase
-description: Firebase adapter for Migration Script Runner - Database migrations for Firebase Realtime Database
+title: "MSR: Firebase"
+description: "Firebase implementation for Migration Script Runner - Database migrations for Firebase Realtime Database"
 baseurl: "/msr-firebase"
 url: "https://migration-script-runner.github.io"
 
@@ -23,9 +23,9 @@ custom_css:
 
 # Aux links for the upper right navigation
 aux_links:
-  "MSR Firebase on GitHub":
+  "MSR: Firebase on GitHub":
     - "//github.com/migration-script-runner/msr-firebase"
-  "MSR Firebase on npm":
+  "MSR: Firebase on npm":
     - "//npmjs.org/package/@migration-script-runner/firebase"
   "MSR Core Docs":
     - "//migration-script-runner.github.io/msr-core"
