--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,61 +1,38 @@
-name: npm-publish
+name: Publish to npm
+
 on:
   push:
-    branches:
-      - master
+    tags:
+      - 'v*'  # Trigger on version tags (v0.1.7, v0.2.0, etc.)
+  workflow_dispatch:  # Manual trigger
 
 jobs:
-  check:
-    name: Check Version
-    runs-on: ubuntu-latest
-    outputs:
-      changed: ${{ steps.check.outputs.changed }}
-      version: ${{ steps.check.outputs.version }}
-      commit: ${{ steps.check.outputs.commit }}
-      type: ${{ steps.check.outputs.type }}
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Check if version has been updated
-        id: check
-        uses: EndBug/version-check@v2
-
-      - name: Log when unchanged
-        if: steps.check.outputs.changed == 'false'
-        run: 'echo "No version change"'
-
-      - name: Log when changed
-        if: steps.check.outputs.changed == 'true'
-        run: 'echo "Version change found in commit ${{ steps.check.outputs.commit }}! New version: ${{ steps.check.outputs.version }} (${{ steps.check.outputs.type }})"'
   publish:
-    needs:
-      - check
-    if: needs.check.outputs.changed == 'true'
-    name: Publish
+    name: Publish to npm
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write  # Required for provenance
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: "16"
+          node-version: "20"
+          registry-url: 'https://registry.npmjs.org'
 
-      - run: npm install
+      - name: Install dependencies
+        run: npm ci
 
-      - name: Run linting
-        run: npm run lint
+      - name: Create backups directory
+        run: mkdir -p backups
 
-      - name: Run unit tests
-        run: npm run test:unit
-
-      - run: npm run build
-
-      - uses: JS-DevTools/npm-publish@v3
-        with:
-          token: ${{ secrets.NPM_AUTH_TOKEN }}
-
-      - uses: thejeff77/action-push-tag@v1.0.0
-        with:
-          tag: 'v${{ needs.check.outputs.version }}'
+      - name: Publish to npm
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        # prepublishOnly hook runs build, lint, and test:unit automatically
+        # Provenance is signed automatically via id-token: write
