--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "docs:install": "cd docs && bundle install",
     "docs:serve": "cd docs && bundle exec jekyll serve",
     "docs:build": "cd docs && bundle exec jekyll build",
-    "prepare": "husky"
+    "prepare": "husky",
+    "prepublishOnly": "npm run build && npm run lint && npm run test:unit"
   },
   "keywords": [
     "firebase",
