--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
     "eslint": "^9.39.2",
+    "eslint-formatter-junit": "^9.0.1",
     "eslint-plugin-only-warn": "^1.1.0",
     "firebase-admin": "^11.11.0",
     "firebase-tools": "^15.0.0",
