#21: Add build step before running tests in CI
Fixes MODULE_NOT_FOUND error - CLI integration tests require compiled
dist/src/cli.js to exist before running.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,9 @@ jobs:
             - node_modules
           key: v3-dependencies-{{ checksum "package-lock.json" }}
       - run:
+          name: Build TypeScript
+          command: npm run build
+      - run:
           name: Setup CI Environment
           command: source scripts/ci.sh
       - run:
