#21: Add SonarCloud integration for code quality analysis
- Created GitHub Actions workflow for automated SonarCloud scans
- Updated .sonarcloud.properties with coverage reporting config
- Configured to run on push to master/main/release branches and PRs
- Uses existing SONAR_TOKEN secret and project key

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,15 +1,20 @@
 # Path to sources
 sonar.sources=src
-sonar.exclusions=test
-#sonar.inclusions=
+sonar.exclusions=**/*.test.ts,**/*.spec.ts,**/test/**,**/dist/**,**/node_modules/**
 
 # Path to tests
 sonar.tests=test
-#sonar.test.exclusions=
-#sonar.test.inclusions=
+sonar.test.inclusions=**/*.test.ts,**/*.spec.ts
 
 # Source encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
+
+# Coverage paths
+sonar.javascript.lcov.reportPaths=reports/coverage/lcov.info
+sonar.typescript.lcov.reportPaths=reports/coverage/lcov.info
+
+# Language
+sonar.language=ts
 
 # Exclusions for copy-paste detection
-#sonar.cpd.exclusions=
+sonar.cpd.exclusions=**/*.test.ts,**/*.spec.ts
