#21: Create backups directory in CI before running tests
The backups/ directory is gitignored and doesn't exist in CI environment

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Create backups directory
+        run: mkdir -p backups
+
       - name: Run tests with coverage
         run: npm run test:coverage
 
