#21: Fix npm publish: add --access public flag
- Scoped packages require --access public to be published as free packages
- Added --provenance for supply chain security attestation

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,8 +31,8 @@ jobs:
         run: mkdir -p backups
 
       - name: Publish to npm
-        run: npm publish
+        run: npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         # prepublishOnly hook runs build, lint, and test:unit automatically
-        # Provenance is signed automatically via id-token: write
+        # Provenance provides supply chain security attestation
